Risdev-11398 literature context (#2495)
* create Literature context definitions in jsonld file
* remove obsolete firstPublicationDate from api. It is still used for
ordering in opensearch but no longer exposed in the api
* use LiteratureSearchSchema in frontend search results